--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,203 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+/*
+//////////////////////////////////////////////
+*/
 header {
-    background: #385998;
+  background: #385998;
+  padding: 15px;
+}
+
+header a {
+  color: white;
+  font-size: 14px;
+  font-weight: 300;
+}
+
+header .fa {
+  color: white;
+  font-size: 16px;
+}
+
+header .logo-area {
+  color: white;
+  display: inline-block;
+  width: 20%;
+  margin-left: -4px;
+}
+
+header .logo-area a {
+  color: white;
+  font-size: 20px;
+}
+
+header .menu {
+  display: inline-block;
+  width: 20%;
+  margin-left: -4px;
+  border-right: 1px solid rgba(255,255,255, .3);
+  text-align: right;
+  padding-right: 20px;
+}
+
+header .menu ul li {
+  display: inline-block;
+}
+
+header .menu ul li a {
+  margin-right: 20px;
+}
+
+header .icon-links {
+  display: inline-block;
+  width: 20%;
+  margin-left: -4px;
+  padding-left: 20px;
+}
+
+header .icon-links ul li{
+  display: inline-block;
+  margin-right: 10px;
+}
+
+header .icon-links .quick-options {
+  display: inline-block;
+  margin-left: -4px;
+  border-right: 1px solid rgba(255, 255, 255, 0.3);
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+header .icon-links .privacy {
+  display: inline-block;
+  margin-left: -4px;
+  padding-left: 20px;
+}
+
+header .search-area {
+  display: inline-block;
+  width: 40%;
+  margin-left: -4px;
+  text-align: right;
+}
+
+header .search-area ul li {
+  display: inline-block;
+}
+/*
+//////////////////////////////////////////////
+*/
+#top-area {
+  padding: 200px 15px 90px 15px;
+  background: url(https://wallpapercave.com/wp/IgouwDQ.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+#top-area .profile-info .user-img {
+  padding: 10px;
+  display: inline-block;
+}
+
+#top-area .profile-info .user-img img {
+  border-radius: 50%;
+}
+
+#top-area .profile-info .user-details {
+  display: inline-block;
+  vertical-align: top;
+  padding-left: 20px;
+}
+
+#top-area .profile-info .user-details h3 {
+  color: white;
+  font-size: 24px;
+  font-weight: 300;
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+
+#top-area .profile-info .user-details a {
+  display: inline-block;
+  margin-left: -4px;
+  margin-right: 5%;
+  width: 45%;
+  text-align: center;
+  text-transform: uppercase;
+  color: white;
+  font-size: 12px;
+  padding: 10px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  background: rgba(255, 255, 255, 0.3);
+  transition: background .4s ease-in-out;
+}
+
+#top-area .profile-info .user-details a:hover {
+  background: #2196F3;
+}
+/*
+//////////////////////////////////////////////
+*/
+#content-area {
+  background: #FAFAFA;
+  overflow: auto;
+  padding: 50px 0;
+}
+
+#content-area .side-column {
+  float: left;
+  width: 35%;
+  margin: 0 2.5%;
+  height: 600px;
+}
+
+#content-area .widget-box {
+  padding: 15px;
+  background: #fff;
+  margin: 0 0 15px 0;
+  border-radius: 3px;
+  -webkit-box-shadow: 0px 2px 5px -1px rgba(138,138,138,1);
+  -moz-box-shadow: 0px 2px 5px -1px rgba(138,138,138,1);
+  box-shadow: 0px 2px 5px -1px rgba(138,138,138,1);
+  overflow: auto;
+}
+
+#content-area .widget-box .head .widget-icon {
+  background: #BFBFBF;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#content-area .widget-box .head .widget-icon .fa{
+  max-width: 50%;
+  font-size: 22px;
+}
+
+#content-area .widget-box .head .widget-title {
+  display: inline-block;
+}
+
+#content-area .main-area {
+  float: left;
+  width: 55%;
+  margin: 0 2.5%;
+  height: 600px;
 }
