--- a/css/main.css
+++ b/css/main.css
@@ -161,7 +161,7 @@ header .search-area ul li {
   float: left;
   width: 35%;
   margin: 0 2.5%;
-  height: 600px;
+  max-width: 380px;
 }
 
 #content-area .widget-box {
@@ -173,6 +173,10 @@ header .search-area ul li {
   -moz-box-shadow: 0px 2px 5px -1px rgba(138,138,138,1);
   box-shadow: 0px 2px 5px -1px rgba(138,138,138,1);
   overflow: auto;
+}
+
+#content-area .widget-box .head .widget-icon-container {
+  display: inline-block;
 }
 
 #content-area .widget-box .head .widget-icon {
@@ -193,11 +197,55 @@ header .search-area ul li {
 
 #content-area .widget-box .head .widget-title {
   display: inline-block;
+  padding: 0 0 0 10px;
+}
+
+#content-area .widget-box .body {
+  padding: 20px 0;
 }
 
 #content-area .main-area {
   float: left;
   width: 55%;
   margin: 0 2.5%;
-  height: 600px;
+}
+
+#content-area .main-area .widget-box.submenu {
+  padding: 0;
+  margin: 0 0 20px 0;
+}
+
+#content-area .main-area .submenu ul {
+  padding: 0;
+}
+
+#content-area .main-area .submenu ul li {
+  display: inline-block;
+  padding: 10px;
+  width: 20%;
+  float: left;
+  text-align: center;
+  border-bottom: 3px solid white;
+  transition: all .4s ease-in-out;
+  cursor: pointer;
+}
+
+#content-area .main-area .submenu ul li:hover {
+  border-bottom: 3px solid #2196F3;
+  color: #2196F3;
+}
+
+#content-area .main-area .submenu ul li:nth-child(5) {
+  padding: 28px 0 21px;
+}
+
+#content-area .main-area .submenu ul li .fa {
+  font-size: 20px;
+}
+
+#content-area .main-area .submenu ul li span {
+  display: block;
+  margin: 15px 0 0 0;
+  font-size: 14px;
+  text-transform: uppercase;
 }
