--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,12 @@ html {
 
 a {
   text-decoration: none;
+  color: #2196F3;
+  transition: all .2s ease-in-out;
+}
+
+a:hover {
+  color: red;
 }
 /*
 //////////////////////////////////////////////
@@ -98,7 +104,8 @@ header .search-area ul li {
 */
 #top-area {
   padding: 200px 15px 90px 15px;
-  background: url(https://wallpapercave.com/wp/IgouwDQ.jpg) no-repeat center center fixed;
+  background: url(https://wallpapercave.com/wp/IgouwDQ.jpg);
+  no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -248,4 +255,54 @@ header .search-area ul li {
   margin: 15px 0 0 0;
   font-size: 14px;
   text-transform: uppercase;
+}
+
+#content-area .main-area .widget-box.post {
+  overflow: auto;
+}
+
+#content-area .main-area .widgetbox.post .head .user-img-container {
+  width: 8%;
+  display: inline-block;
+  overflow: auto;
+  float: left;
+}
+
+#content-area .main-area .widget-box.post .head .user-img {
+   display: inline-block;
+   float: left;
+   background: url(https://s3.amazonaws.com/uifaces/faces/twitter/davidburlton/128.jpg);
+   no-repeat center center fixed;
+   -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover;
+   background-size: cover;
+   height: 40px;
+   width: 40px;
+   margin: 0;
+   border-radius: 50%;
+}
+
+#content-area .main-area .widget-box.post .head .post-info {
+  display: inline-block;
+  float: left;
+  width: 92%;
+}
+
+#content-area .main-area .widget-box.post .head::after {
+  content: " ";
+  clear: both;
+  display: table;
+}
+
+#content-area .main-area .widget-box.post .head .post-info .user-info{
+  display: block;
+  font-size: 14px;
+  margin: 4px 0 6px 0;
+}
+
+#content-area .main-area .widget-box.post .head .post-info .post-date {
+  display: block;
+  font-size: 12px;
+  color: #ABABAB;
 }
